# bkn-foundry

./: .gitignore  .redocly.yaml  AGENTS.md  LICENSE  LICENSE-OPENBKN.txt  LICENSE.txt  Makefile  NOTICE  README.md  README.zh.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: task.md  task.yml
.github/workflows/: README.md  automation-agent-metrics.yml  automation-claude-review.yml  automation-ghcr-cleanup.yml  automation-mirror-swr-images.yml  automation-mirror-swr-to-ghcr.yml  automation-route-issue.yml  ci-adp-bkn.yml  ci-adp-context-loader.yml  ci-adp-vega.yml  ci-bkn-safe.yml  ci-bkn-trace.yml  ci-docs-api.yml  ci-execution-factory.yml  ci-infra-oss-gateway.yml  ci-trace-ai.yml  lint-no-ee-import.yml  mirror-third-party-images.yml  release-adp-agent-retrieval.yml  release-adp-bkn-backend.yml  release-adp-bkn-safe.yml  release-adp-capabilities-lab.yml  release-adp-coderunner.yml  release-adp-dataflow.yml  release-adp-doc-convert.yml  release-adp-ontology-query.yml  release-adp-operator-integration.yml  release-adp-vega-backend.yml  release-bkn-trace-agent-observability.yml  release-bkn-trace-otelcol.yml  release-data-migrator.yml  release-decision-agent.yml  release-deploy-redis.yml  release-infra-bkn-agent.yml  release-infra-mf-model-api.yml  release-infra-mf-model-manager.yml  release-infra-model-factory-base.yml  release-infra-oss-gateway.yml  release-infra-sandbox.yml  release-mariadb.yml  (+7 more)
adp/: README.md  README.zh.md
adp/bkn/: README.md  README.zh.md
adp/dataflow/: Dockerfile.dataflow
adp/execution-factory/: README-zh.md  README.md
adp/vega/: AGENTS.md
bkn-safe/: Dockerfile  README.md
bkn-safe/contract/: authz_contract_test.go  go.mod  go.sum  introspect_contract_test.go
bkn-safe/dev/: Dockerfile  README.md  docker-compose.yml  license-e2e.sh  seed-clients.sh  validate-device-e2e.sh  validate-e2e.sh  validate-safe-api.sh  validate.sh
bkn-safe/docs/: API.md  DESIGN.md  admin-api-frontend-changes.md  cli-migration-to-bkn-safe.md  frontend-object-grants-integration.md  oauth-redirect-uris.md
bkn-safe/scripts/: dev-tunnels.ps1
bkn-safe/server/: .gitignore  go.mod  go.sum  main.go
bkn-trace/: CHANGELOG.md  CHANGELOG.zh.md  README.md  README.zh.md
bkn-trace/agent-observability/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
bkn-trace/otelcol-contribute-chart/: README.md
data-migrator/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.monorepo.yaml  config.yaml.example  copy_repos.py  pyproject.toml  secret-config.yaml.example  verify-rds-config.yaml.example
data-migrator/docker/: Dockerfile.base  Dockerfile.example
data-migrator/server/: data-migrator.py  requirements.txt
data-migrator/sql/: dm8.sql  kdb9.sql  mariadb.sql
data-migrator/tests/: README.md
decision-agent/agent-backend/agent-executor/: pyproject.toml
decision-agent/agent-backend/agent-memory/: pyproject.toml
deploy/: README.md  README.zh.md  bkn-foundry.yaml  deploy.sh  onboard.sh  preflight.sh
deploy/charts/: mariadb-1.0.0.tgz  redis-1.11.2.tgz
deploy/conf/: config.yaml  kube-flannel.yml  local-path-storage.yaml  models.yaml.example
deploy/dev/: README.md  README.zh.md  mac.sh
deploy/images/: README.md  busybox-1.36.1.tar
deploy/notes/: bkn-safe-image-republish.md
deploy/release-manifests/: .keep
deploy/scripts/: bkn-foundry.template.yaml  bkn-redirect.sh  gen-dev-manifest.sh  sync-k8s-images.sh  verify-offline.sh
docs/: README.md  appkey-design.md  appkey-integration.md  bkn-architecture.md  bkn-architecture.zh.md  ci-build-architecture.md  ci-migration-azure-to-actions.md  frontend-small-model-config-changes.zh.md
docs/api/: AUTHORING.md  README.md  agent-runtime.yaml  bkn-agent.yaml
docs/isf-replacement/: README.md  adp-auth-permission-isf-analysis-2026-05-22.md  anyshare-excision-analysis-2026-06-05.md  bkn-safe-implementation-plan-2026-06-03.md  cli-e2e-handoff-2026-06-05.md  cutover-plan-2026-06-04.md  cutover-runbook-VM-2026-06-05.md  dataflow-removal-scope-2026-06-05.md  isf-contract-freeze-2026-05-25.md  isf-excision-migration-plan-2026-06-03.md  isf-interface-inventory-compat-2026-05-25.md  isf-replacement-landing-design-2026-05-25.md
examples/: README.md  README.zh.md
examples/01-db-to-qa/: README.md  README.zh.md  env.sample  run.sh  seed.sql
examples/02-csv-to-kn/: README.md  README.zh.md  env.sample  run.sh
examples/03-action-lifecycle/: README.md  README.zh.md  env.sample  run.sh
examples/04-multi-agent-session-id/: README.md  README.zh.md  env.sample  run.sh
examples/05-skill-routing-loop/: README.md  README.zh.md  env.sample  run.sh
examples/06-world-cup/: .gitignore  README.md  README.zh.md  env.sample  (+5 more)
help/: README.md
infra/: README.md
migrations/: README.md
release-notes/: README.md
rules/: ARCHITECTURE.md  ARCHITECTURE.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  DEVELOPMENT.md  DEVELOPMENT.zh.md  README.md  README.zh.md  RELEASE.md  RELEASE.zh.md  TESTING.md  TESTING.zh.md  WORKFLOW.md  WORKFLOW.zh.md
scripts/: verify-charts-vs-0.8.0.sh
(+3892 files in other folders)
